--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,4 +5,5 @@ IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 	link_directories(/opt/X11/lib)
 	add_definitions(-w)
 ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+add_definitions(-std=c++11)
 target_link_libraries (project ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
