--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,12 @@ project (TI1805-Project)
 find_package (GLUT REQUIRED)
 find_package (OpenGL REQUIRED)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/src)
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+        include_directories(/opt/X11/include)
+        link_directories(/opt/X11/lib)
+        add_definitions(-w)
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+
+add_definitions(-std=c++11)
+
 add_subdirectory(src)
