Yay, bounding boxes \o/

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,11 @@
+add_subdirectory(kdtree)
 add_subdirectory(shapes)
 
 set (main
-	kdnode.cpp
 	raytracing.cpp
 	mesh.cpp
 	main.cpp
 )
 
 add_executable (project ${main})
-target_link_libraries (project shapes ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
+target_link_libraries (project shapes kdtree ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
